<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer_display"
            android:textAlignment="center"
            android:textSize="100sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"
            android:text="@string/start"
            app:layout_constraintEnd_toStartOf="@id/reset_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timer_text" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:importantForAccessibility="no"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="@+id/start_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_btn"
            app:layout_constraintTop_toTopOf="@+id/start_btn" />

        <Button
            android:id="@+id/settings_btn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/reset_btn"
            app:layout_constraintStart_toStartOf="@+id/start_btn"
            app:layout_constraintTop_toBottomOf="@id/reset_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>